# expense-classifier

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Categorization_Plan.md  DATA_ENGINEERING.md  FEATURES.md  LICENSE  MANIFEST.in  README.md  VISUALIZATION.md  Visualizer_Options.md  generate_report.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
expense_classifier/: __init__.py  ai_classifier.py  bank_utils.py  classifier.py  cli.py  combine.py  common_utils.py  database.py  db_utils.py  file_correction.py  ingestor.py  main.py  manual_correction.py  models.py  paytm_lookup.py  pipeline.py  transformer.py
migrations/: env.py
migrations/versions/: 182fb2b171af_.py  59e39cde4fc3_.py  61bc63f1a8fc_.py  85b8f668b355_.py  8c3b8e03a99b_.py  d3547415fae9_.py  f61cef8de5a8_.py  f885399067be_.py
reporting/: generator.py
